# Hanabi

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
engine/include/: hanabi.h  hanabi_pch.h
engine/include/API/: NcursesWindow.h
engine/include/core/: Engine.h  Game.h  Window.h  core.h  logging.h  test.h
engine/include/renderer/: renderer.cpp  renderer.h
engine/include/renderer/backend/: term_graphics.h
engine/include/renderer/frontend/: graphics.h
engine/include/renderer/internal/: __cpp-terminal.h
engine/src/: Engine.cpp  Game.cpp  NcursesWindow.cpp
frontend/: main.cpp
frontend/ascii/: main.cpp
frontend/sfml/: main.cpp
tools/: build.bat  build.sh  build_all.bat  build_all.sh  clion.sh  run.bat  run.sh
